# python-package

./: .editorconfig  CODE_OF_CONDUCT.md  LICENSE  README.md  cookiecutter.json
.github/: CODEOWNERS
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.__project_slug }}/: .codeclimate.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  REUSE.toml  prek.toml  pyproject.toml  setup.cfg
{{ cookiecutter.__project_slug }}/.github/: CODEOWNERS  dependabot.yml  zizmor.yml
{{ cookiecutter.__project_slug }}/.github/workflows/: flake8.yml  mypy.yml  prek.yml  publish.yml  pylint.yml  pytest.yml  release.yml
{{ cookiecutter.__project_slug }}/docs/: Makefile  conf.py  index.rst  make.bat
{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.package_slug }}/: __init__.py
