# SPDX-FileCopyrightText: {{ cookiecutter.__year }} {{ cookiecutter.author_name }}
#
# SPDX-License-Identifier: {{ cookiecutter.license }}

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.0"]

[dependency-groups]
ci = [
  "anybadge",
  "codeclimate-test-reporter",
  "flake8-docstrings-complete",
  "flake8-docstrings",
  "flake8-gl-codeclimate",
  "flake8-pyproject",
  "flake8",
  "pip-audit",
  "pylint-gitlab",
  "pylint-per-file-ignores",
  "pylint",
  "typos",
  "typos-gitlab-code-quality"
]
dev = [
  "prek>=0.3.5",
  "reuse>=6.2.0",
  "ruff>=0.15.5",
  "ty>=0.0.21",
  "uv>=0.10.9"
]
docs = [
  "sphinx-autoapi",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme>3",
  "sphinx>8",
  "asteroid<4"
]
tests = ["coverage", "pytest-cov", "pytest>=7.4.0"]

[project]
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: {{ cookiecutter.python_version }}",
  "Typing :: Typed"
] # TODO @{{ cookiecutter.author_email }}: add/update project classifiers here from https://pypi.org/classifiers/
# TODO @{{ cookiecutter.author_email }}: add dependencies via uv add <dependency>
dependencies = []
description = "{{ cookiecutter.short_description }}"
license = "{{ cookiecutter.license }}"
license-files = ["LICENSES/*"]
name = "{{ cookiecutter.package_slug }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
version = "{{ cookiecutter.version }}"

[project.urls]
# TODO @{{ cookiecutter.author_email }}: add URLs here
# Documentation =
# Homepage =
# Source =
# Tracker =

[tool.flake8]
check-return-types = true
extend-ignore = ["DCO010", "DCO060"]
max-complexity = "10"
max-line-length = "88"
per-file-ignores = []
select = "DCO, DOC"
style = "google"

[tool.licensecheck]
ignore_packages = []
using = "PEP631"
zero = true

[tool.pylint.MASTER]
extension-pkg-allow-list = []
load-plugins = ["pylint_per_file_ignores"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = "88"

[tool.pylint.SIMILARITIES]
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"
min-similarity-lines = 10

[tool.pylint-per-file-ignores]
# docs/conf.py: Ignore constant name not UPPER_CASE (C0103) and redefining built-in (W0622) for copyright notice
# tests/*: Ignore missing docs (C0114, C0116), too long lines (E501), too few/many public methods (R0903, R0904), access to protected member (W0212)
"docs/conf.py" = "C0103,W0622"
"tests/*" = "C0114,C0116,E501,R0903,R0904,W0212"

[tool.pytest.ini_options]
addopts = "--cov=src/{{ cookiecutter.package_slug }}/ --cov-report=term-missing --cov-report=xml:coverage.xml --junitxml=report.xml"

filterwarnings = ["ignore::tqdm.TqdmExperimentalWarning"]

[tool.ruff]
target-version = "{{ cookiecutter.__py }}"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
extend-fixable = ["ALL"]
extend-select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "D",
  "DOC",
  "DTZ",
  "E",
  "ERA",
  "EXE",
  "F",
  "FAST",
  "FBT",
  "FLY",
  "FURB",
  "I",
  "INP",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PERF",
  "PIE",
  "PL",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "T20",
  "TC",
  "UP",
  "W"
]
# E203: incorrectly triggers on array slices: <https://github.com/PyCQA/pycodestyle/issues/373>
# D105: Docstrings in standard magic methods are superfluous
# D107: Google docstring style prevents docstrings in __init__ function
ignore = ["E203", "D105", "D107"]
preview = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]
"tests/*" = [
  "S101",
  "ANN201",
  "ANN205",
  "D",
  "E501",
  "PLR0904",
  "PLC2701",
  "PLC0415",
  "PLR2004",
  "SLF001",
  "S307"
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
# default-groups = "all"  # TODO @{{ cookiecutter.author_email }}: activate if preferred
